objects/agf__ADM_Impact_Type__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Impact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Impact</label>
        <referenceTo>agf__ADM_Impact__c</referenceTo>
        <relationshipLabel>Impact Types</relationshipLabel>
        <relationshipName>Impact_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Type</label>
        <referenceTo>agf__ADM_Type__c</referenceTo>
        <relationshipLabel>Impact Types</relationshipLabel>
        <relationshipName>Impact_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Impact Type</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>agf__Impact__c</columns>
        <columns>agf__Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IT-{0000}</displayFormat>
        <label>Impact Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Impact Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>